--- a/lib/orbit_web/live/board_live/show.html.heex
+++ b/lib/orbit_web/live/board_live/show.html.heex
@@ -1,6 +1,6 @@
 <h1>Show Board</h1>
 
-<%= if @live_action in [:edit] do %>
+#<%= if @live_action in [:edit] do %>
   <.modal return_to={Routes.board_show_path(@socket, :show, @board)}>
     <.live_component
       module={OrbitWeb.BoardLive.FormComponent}
@@ -19,8 +19,9 @@
     <strong>Name:</strong>
     <%= @board.name %>
   </li>
-
 </ul>
+
+<span><%= live_patch "New Column", to: Routes.column_index_path(@socket, :new, @board.id) %></span>
 
 <span><%= live_patch "Edit", to: Routes.board_show_path(@socket, :edit, @board), class: "button" %></span> |
 <span><%= live_redirect "Back", to: Routes.board_index_path(@socket, :index) %></span>
