--- a/lib/orbit_web/live/card_live/form_component.html.heex
+++ b/lib/orbit_web/live/card_live/form_component.html.heex
@@ -4,7 +4,7 @@
   <.form
     let={f}
     for={@changeset}
-    id="cards-form"
+    id="card-form"
     phx-target={@myself}
     phx-change="validate"
     phx-submit="save">
