--- a/lib/orbit_web/live/column_live/index.html.heex
+++ b/lib/orbit_web/live/column_live/index.html.heex
@@ -1,14 +1,14 @@
 <h1>Listing Columns</h1>
 
 <%= if @live_action in [:new, :edit] do %>
-  <.modal return_to={Routes.column_index_path(@socket, :index)}>
+  <.modal return_to={Routes.column_index_path(@socket, :index, "board-id")}>
     <.live_component
       module={OrbitWeb.ColumnLive.FormComponent}
       id={@column.id || :new}
       title={@page_title}
       action={@live_action}
       column={@column}
-      return_to={Routes.column_index_path(@socket, :index)}
+      return_to={Routes.column_index_path(@socket, :index, "board-id")}
     />
   </.modal>
 <% end %>
@@ -27,8 +27,8 @@
         <td><%= column.name %></td>
 
         <td>
-          <span><%= live_redirect "Show", to: Routes.column_show_path(@socket, :show, column) %></span>
-          <span><%= live_patch "Edit", to: Routes.column_index_path(@socket, :edit, column) %></span>
+          <span><%= live_redirect "Show", to: Routes.column_show_path(@socket, :show, "board-id", column) %></span>
+          <span><%= live_patch "Edit", to: Routes.column_index_path(@socket, :edit, "board-id", column) %></span>
           <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: column.id, data: [confirm: "Are you sure?"] %></span>
         </td>
       </tr>
@@ -36,4 +36,4 @@
   </tbody>
 </table>
 
-<span><%= live_patch "New Column", to: Routes.column_index_path(@socket, :new) %></span>
+<span><%= live_patch "New Column", to: Routes.column_index_path(@socket, :new, "board-id") %></span>
