--- a/lib/orbit_web/live/column_live/form_component.html.heex
+++ b/lib/orbit_web/live/column_live/form_component.html.heex
@@ -8,11 +8,13 @@
     phx-target={@myself}
     phx-change="validate"
     phx-submit="save">
-  
+
     <%= label f, :name %>
     <%= text_input f, :name %>
     <%= error_tag f, :name %>
-  
+
+    <%= hidden_input f, :board_id, value: @board.id %>
+
     <div>
       <%= submit "Save", phx_disable_with: "Saving..." %>
     </div>
