--- a/lib/orbit_web/live/card_live/form_component.html.heex
+++ b/lib/orbit_web/live/card_live/form_component.html.heex
@@ -8,11 +8,14 @@
     phx-target={@myself}
     phx-change="validate"
     phx-submit="save">
-  
+
     <%= label f, :title %>
     <%= text_input f, :title %>
     <%= error_tag f, :title %>
-  
+
+  <%= hidden_input f, :board_id, value: @board.id %>
+  <%= hidden_input f, :column_id, value: @column.id %>
+
     <div>
       <%= submit "Save", phx_disable_with: "Saving..." %>
     </div>
